--- a/app/src/main/res/layout/horisontal_products_item.xml
+++ b/app/src/main/res/layout/horisontal_products_item.xml
@@ -11,11 +11,12 @@
         android:id="@+id/titleTv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:text="Top uncoming"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:fontFamily="sans-serif-medium"
         app:layout_constraintStart_toStartOf="parent"
