--- a/app/src/main/res/layout/fragment_user_information.xml
+++ b/app/src/main/res/layout/fragment_user_information.xml
@@ -6,15 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".presentation.fragments.UserInformationFragment">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:src="@drawable/ic_profile"
-        android:layout_marginTop="16dp"
-        android:id="@+id/shapeableImageView"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+    <ImageView
+        android:id="@+id/back_button"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="16dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:src="@drawable/ic_left_arrow"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineToolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/toolbar_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Profile"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineToolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/shapeableImageView"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
+        android:padding="2dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guidelineToolbar"
+        app:shapeAppearanceOverlay="@style/RoundImage"
+        app:strokeWidth="2dp"
+        app:strokeColor="#C0C0C0"/>
 
     <TextView
         android:id="@+id/changePhoto"
@@ -40,11 +71,11 @@
         app:layout_constraintTop_toBottomOf="@+id/changePhoto" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:id="@+id/button_logout"
+        android:id="@+id/button_upload"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/ripple_effect_main_buttons"
         android:drawableStart="@drawable/upload_image"
         android:gravity="center"
@@ -67,14 +98,14 @@
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_logout">
+        app:layout_constraintTop_toBottomOf="@+id/button_upload">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/trade_element"
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1"
+            android:padding="10dp">
 
             <ImageView
                 android:id="@+id/tradeImage"
@@ -111,10 +142,11 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1"
+            android:padding="10dp">
+
             <ImageView
                 android:id="@+id/paymentImage"
                 android:layout_width="wrap_content"
@@ -123,6 +155,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/textViewPayment"
                 android:layout_width="wrap_content"
@@ -134,6 +167,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/paymentImage"
                 app:layout_constraintStart_toEndOf="@+id/paymentImage"
                 app:layout_constraintTop_toTopOf="@+id/paymentImage" />
+
             <ImageView
                 android:layout_width="16dp"
                 android:layout_height="16dp"
@@ -147,10 +181,11 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1"
+            android:padding="10dp">
+
             <ImageView
                 android:id="@+id/balanceImage"
                 android:layout_width="wrap_content"
@@ -159,6 +194,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -185,10 +221,11 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1"
+            android:padding="10dp">
+
             <ImageView
                 android:id="@+id/historyImage"
                 android:layout_width="wrap_content"
@@ -197,6 +234,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/textViewHistory"
                 android:layout_width="wrap_content"
@@ -223,10 +261,11 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1"
+            android:padding="10dp">
+
             <ImageView
                 android:id="@+id/restoreImage"
                 android:layout_width="wrap_content"
@@ -235,6 +274,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/textViewRestore"
                 android:layout_width="wrap_content"
@@ -260,10 +300,11 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1"
+            android:padding="10dp">
+
             <ImageView
                 android:id="@+id/helpImage"
                 android:layout_width="wrap_content"
@@ -272,6 +313,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -285,13 +327,14 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
             android:id="@+id/logout_element"
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:padding="10dp"
+            tools:layout_editor_absoluteY="336dp">
 
             <ImageView
                 android:id="@+id/imageLogout"
@@ -323,5 +366,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_end="56dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineToolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="56dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
