--- a/app/src/main/res/layout/item_latest.xml
+++ b/app/src/main/res/layout/item_latest.xml
@@ -73,7 +73,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
             android:background="@drawable/round_button_background"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/ic_add_small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
