--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,20 +51,42 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="56dp"/>
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guidelineToolbar"
+    <RelativeLayout
+        android:layout_margin="16dp"
+        android:background="@drawable/search_background"
+        android:id="@+id/search_container"
+        android:layout_width="300dp"
+        android:layout_height="36dp"
+        android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/recyclerViewCategories"
-        app:queryHint="What are you looking for"
-        app:iconifiedByDefault="false"
-        app:queryBackground="@null"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guidelineToolbar">
+
+        <AutoCompleteTextView
+            android:hint="what are you looking for?"
+            android:textColorHint="@color/black"
+            android:gravity="center"
+            android:id="@+id/autoComplete"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:backgroundTint="@android:color/transparent"
+            android:inputType="textAutoComplete"
+            android:textSize="12sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:padding="8dp"
+            android:src="@drawable/ic_search" />
+
+    </RelativeLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginBottom="8dp"
         android:padding="8dp"
         android:id="@+id/recyclerViewCategories"
         android:layout_width="match_parent"
@@ -76,7 +98,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search"
+        app:layout_constraintTop_toBottomOf="@id/search_container"
         tools:listitem="@layout/category_list_item" />
 
 
