design bottomnav bar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,11 @@
         app:navGraph="@navigation/auth_graph" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        app:itemRippleColor="@null"
+        app:labelVisibilityMode="unlabeled"
+        app:itemIconTint="@drawable/bottom_nav_icons_color"
+        android:background="@drawable/bottom_nav_background"
+        app:itemIconSize="20dp"
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
