--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,7 +4,19 @@
 
     <item
         android:id="@+id/homeFragment"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/ic_bottom_home"
+        android:title="Home" />
+    <item
+        android:id="@+id/favFragment"
+        android:icon="@drawable/ic_bottom_like"
+        android:title="Home" />
+    <item
+        android:id="@+id/cartFragment"
+        android:icon="@drawable/ic_bottom_cart"
+        android:title="Home" />
+    <item
+        android:id="@+id/chatFragment"
+        android:icon="@drawable/ic_bottom_chat"
         android:title="Home" />
     <item
         android:id="@+id/userInformationFragment"
